<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.19">
  <DUT Name="T_Sequence" Id="{aa5b5ec1-1edd-4ca4-bd36-41f74481618e}">
    <Declaration><![CDATA[TYPE T_Sequence :
STRUCT
	pChild: POINTER TO fb_CtrlBase;
	// Access to CIF of child
	pCIF: POINTER TO T_Ctrl_CIf;
	// Associated run sequence group
	uinGroupRun: UINT;
	// Associated stop sequence group
	uinGroupStop: UINT;
	// Command to be executed for run sequence
	intCmdSeqRun: INT;
	// Expected status for run sequence
	intStatusSeqRun: INT;
	// Command to be executed for run sequence
	intCmdSeqStop: INT;
	// Expected status for run sequence
	intStatusSeqStop: INT;
END_STRUCT
END_TYPE]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>